--- a/WeeK14/Day5/Daily_challenge/Calculator_React/my-calculator/src/Calculator.css
+++ b/WeeK14/Day5/Daily_challenge/Calculator_React/my-calculator/src/Calculator.css
@@ -15,12 +15,14 @@ h2 {
 }
 
 .input-container {
+  
   display: flex;
   margin-bottom: 20px;
 }
 
 input {
   padding: 10px;
+  background-color: rgb(67, 247, 187);
   margin-right: 10px;
   border: none;
   border-radius: 4px;
